모바일 상단 카테고리 완료

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -788,10 +788,10 @@ button[aria-expanded="true"].btn-category img {
         content: "";
         display: block;
         position: absolute;
-        left: 5%;
+        left: 1.6rem;
         bottom: 0;
         z-index: 1;
-        width: 90%;
+        width: calc(100% - 3.2rem);
         border-bottom: 1px solid $gray-400;
     }
     .swiper-slide {
@@ -810,7 +810,7 @@ button[aria-expanded="true"].btn-category img {
             border-left: 1px solid $gray-400;
         }
     }
-    .swiper-slide.swiper-slide-thumb-active {
+    .swiper-slide.swiper-slide-thumb-active.on {
         button {
             color: $primary;
             font-weight: bold;
@@ -818,6 +818,7 @@ button[aria-expanded="true"].btn-category img {
     }
 }
 .swiper.subSwiper {
+    position: relative;
     opacity: 0;
     height: 0;
     overflow: hidden;
@@ -826,6 +827,13 @@ button[aria-expanded="true"].btn-category img {
     &.active {
         opacity: 1;
         height: auto;
+    }
+
+    .btn-close {
+        position: absolute;
+        top: 1.6rem;
+        right: 1.6rem;
+        z-index: 1;
     }
 }
 
@@ -880,7 +888,7 @@ button[aria-expanded="true"].btn-category img {
     .search {
         & > button#toggle {
             position: absolute;
-            right: 15%;
+            right: 6rem;
             top: 0.7rem;
             z-index: 1;
             background-color: #fff;
