--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -3,7 +3,7 @@ $indigo: #485cc7;
 $purple: #6f42c1;
 $pink: #d63384;
 $red: #bf2d2d;
-$orange: #fd7e14;
+$orange: #F36B5D;
 $yellow: #f6c233;
 $green: #005427;
 $teal: #20c997;
@@ -49,7 +49,7 @@ $grid-breakpoints: (
     md: 720px,
     lg: 960px,
     xl: 1200px,
-    xxl: 1440px,
+    xxl: 100%,
 ) !default;
 
 $container-max-widths: (
@@ -57,7 +57,7 @@ $container-max-widths: (
     md: 100%,
     lg: 100%,
     xl: 100%,
-    xxl: 1440px,
+    xxl: 100%,
 ) !default;
 
 // scss-docs-start spacer-variables-maps
