--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -76,8 +76,7 @@ button[aria-expanded="true"].btn-category img {
 		height: 50%;
 		text-indent: -9999px;
 		font-size: 0;
-		background: url("../../dist/images/common/ico_arr_top.svg") no-repeat
-			center center;
+		background: url("../../dist/images/common/ico_arr_top.svg") no-repeat center center;
 		background-size: contain;
 	}
 
@@ -129,7 +128,7 @@ button[aria-expanded="true"].btn-category img {
 	}
 }
 
-.navbar-nav .show > .nav-link,
+.navbar-nav .show>.nav-link,
 .navbar-nav .nav-link.active {
 	color: #2d2d2d;
 }
@@ -177,7 +176,7 @@ button[aria-expanded="true"].btn-category img {
 }
 
 .carousel {
-	&-caption > h2 {
+	&-caption>h2 {
 		font-size: 2.2rem;
 	}
 
@@ -189,7 +188,7 @@ button[aria-expanded="true"].btn-category img {
 		bottom: auto;
 		transform: translateY(-35%);
 
-		& > span {
+		&>span {
 			display: inline-block;
 			width: 4rem;
 			margin-bottom: 0.5em;
@@ -264,7 +263,7 @@ button[aria-expanded="true"].btn-category img {
 		opacity: 1;
 	}
 
-	&.active > span {
+	&.active>span {
 		opacity: 0;
 	}
 }
@@ -301,7 +300,7 @@ button[aria-expanded="true"].btn-category img {
 		max-width: 12rem;
 	}
 
-	.swiper-horizontal > .swiper-pagination-bullets,
+	.swiper-horizontal>.swiper-pagination-bullets,
 	.swiper-pagination-bullets.swiper-pagination-horizontal,
 	.swiper-pagination-custom,
 	.swiper-pagination-fraction {
@@ -331,14 +330,14 @@ button[aria-expanded="true"].btn-category img {
 			border-right: 1px solid $gray-300;
 		}
 
-		a > em {
+		a>em {
 			position: relative;
 			display: inline-block;
 			padding-right: 1.5rem;
 			font-style: normal;
 		}
 
-		a > em::after {
+		a>em::after {
 			content: "";
 			position: absolute;
 			right: 0;
@@ -346,8 +345,7 @@ button[aria-expanded="true"].btn-category img {
 			display: block;
 			width: 0.56rem;
 			height: 1.1rem;
-			background: url("../../dist/images/common/ico_arr_rb.svg") no-repeat
-				right 50%;
+			background: url("../../dist/images/common/ico_arr_rb.svg") no-repeat right 50%;
 			background-size: contain;
 		}
 	}
@@ -355,8 +353,7 @@ button[aria-expanded="true"].btn-category img {
 	.add-word {
 		display: block;
 		padding-left: 1.4rem;
-		background: url("../../dist/images/common/ico_plus.svg") no-repeat left
-			center;
+		background: url("../../dist/images/common/ico_plus.svg") no-repeat left center;
 	}
 
 	.vocabulary {
@@ -406,8 +403,7 @@ button[aria-expanded="true"].btn-category img {
 		}
 
 		&.active .add-word {
-			background: url("../../dist/images/common/ico_minus.svg") no-repeat
-				left center;
+			background: url("../../dist/images/common/ico_minus.svg") no-repeat left center;
 		}
 	}
 }
@@ -471,7 +467,7 @@ button[aria-expanded="true"].btn-category img {
 		background: $gray-500;
 	}
 
-	.swiper-horizontal > .swiper-pagination-bullets,
+	.swiper-horizontal>.swiper-pagination-bullets,
 	.swiper-pagination-bullets.swiper-pagination-horizontal,
 	.swiper-pagination-custom,
 	.swiper-pagination-fraction {
@@ -486,7 +482,7 @@ button[aria-expanded="true"].btn-category img {
 		font-size: 1.8rem;
 	}
 
-	dt + dd {
+	dt+dd {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		display: -webkit-box;
@@ -495,6 +491,7 @@ button[aria-expanded="true"].btn-category img {
 		-webkit-box-orient: vertical;
 		word-wrap: break-word;
 	}
+
 	dd {
 		font-size: 1.2rem;
 
@@ -544,8 +541,7 @@ button[aria-expanded="true"].btn-category img {
 		position: relative;
 		height: 40vh;
 		overflow: hidden;
-		background: url("../../dist/images/photo/sample_popup.jpg") no-repeat
-			center center;
+		background: url("../../dist/images/photo/sample_popup.jpg") no-repeat center center;
 		background-size: cover;
 		justify-content: center;
 
@@ -565,8 +561,7 @@ button[aria-expanded="true"].btn-category img {
 			font-size: 2.4rem;
 			margin: 0;
 			padding: 0;
-			background: url("../../dist/images/common/btn_w_close.svg")
-				no-repeat left top;
+			background: url("../../dist/images/common/btn_w_close.svg") no-repeat left top;
 		}
 
 		.blackLayer {
@@ -577,26 +572,20 @@ button[aria-expanded="true"].btn-category img {
 			width: 100%;
 			height: 100%;
 			/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+70&0.65+0,0+100 */
-			background: -moz-linear-gradient(
-				top,
-				rgba(0, 0, 0, 0.65) 0%,
-				rgba(0, 0, 0, 0.2) 70%,
-				rgba(0, 0, 0, 0) 100%
-			);
+			background: -moz-linear-gradient(top,
+					rgba(0, 0, 0, 0.65) 0%,
+					rgba(0, 0, 0, 0.2) 70%,
+					rgba(0, 0, 0, 0) 100%);
 			/* FF3.6-15 */
-			background: -webkit-linear-gradient(
-				top,
-				rgba(0, 0, 0, 0.65) 0%,
-				rgba(0, 0, 0, 0.2) 70%,
-				rgba(0, 0, 0, 0) 100%
-			);
+			background: -webkit-linear-gradient(top,
+					rgba(0, 0, 0, 0.65) 0%,
+					rgba(0, 0, 0, 0.2) 70%,
+					rgba(0, 0, 0, 0) 100%);
 			/* Chrome10-25,Safari5.1-6 */
-			background: linear-gradient(
-				to bottom,
-				rgba(0, 0, 0, 0.65) 0%,
-				rgba(0, 0, 0, 0.2) 70%,
-				rgba(0, 0, 0, 0) 100%
-			);
+			background: linear-gradient(to bottom,
+					rgba(0, 0, 0, 0.65) 0%,
+					rgba(0, 0, 0, 0.2) 70%,
+					rgba(0, 0, 0, 0) 100%);
 			/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000', GradientType=0);
 			/* IE6-9 */
@@ -747,15 +736,13 @@ button[aria-expanded="true"].btn-category img {
 	}
 }
 
-.swiper-pagination-horizontal.swiper-pagination-bullets
-	.swiper-pagination-bullet {
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
 	border: 1px solid $gray-400;
 	background-color: $gray-300;
 	opacity: 1;
 }
 
-.swiper-pagination-horizontal.swiper-pagination-bullets
-	.swiper-pagination-bullet.swiper-pagination-bullet-active {
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
 	border: 1px solid $gray-600;
 	background-color: $primary;
 }
@@ -769,11 +756,13 @@ button[aria-expanded="true"].btn-category img {
 			transition: transform 0.3s ease-in-out;
 		}
 	}
+
 	#toggle.active {
 		img {
 			transform: rotate(-180deg);
 		}
 	}
+
 	.addinfo {
 		width: 100%;
 		height: 0;
@@ -786,7 +775,8 @@ button[aria-expanded="true"].btn-category img {
 			opacity: 1;
 		}
 	}
-	> span {
+
+	>span {
 		font-size: 1.4rem;
 	}
 }
@@ -819,11 +809,13 @@ button[aria-expanded="true"].btn-category img {
 		width: calc(100% - 3.2rem);
 		border-bottom: 1px solid $gray-400;
 	}
+
 	.swiper-slide {
 		button {
 			position: relative;
 			width: 100%;
 		}
+
 		button::before {
 			content: "";
 			display: block;
@@ -835,6 +827,7 @@ button[aria-expanded="true"].btn-category img {
 			border-left: 1px solid $gray-400;
 		}
 	}
+
 	.swiper-slide.swiper-slide-thumb-active.on {
 		button {
 			color: $primary;
@@ -892,7 +885,7 @@ button[aria-expanded="true"].btn-category img {
 			transition: width 0.3s, opacity 0.2s;
 		}
 
-		a.active + .depth {
+		a.active+.depth {
 			width: 100%;
 			opacity: 1;
 		}
@@ -914,6 +907,7 @@ button[aria-expanded="true"].btn-category img {
 			color: $primary;
 			padding-bottom: 0.2rem;
 		}
+
 		strong::after {
 			content: "";
 			position: absolute;
@@ -949,8 +943,7 @@ button[aria-expanded="true"].btn-category img {
 	.ico-mark {
 		width: 2rem;
 		height: 2rem;
-		background: url("../../dist/images/common/ico_mark.svg") no-repeat
-			center center;
+		background: url("../../dist/images/common/ico_mark.svg") no-repeat center center;
 		text-indent: -99999em;
 		background-size: auto;
 		display: inline-block;
@@ -973,6 +966,7 @@ button[aria-expanded="true"].btn-category img {
 			font-size: 1.8rem;
 			font-weight: bold;
 		}
+
 		p {
 			color: $gray-500;
 			font-size: 1.2rem;
@@ -989,6 +983,7 @@ button[aria-expanded="true"].btn-category img {
 		margin: 1rem 0 0 0;
 		height: 4rem;
 	}
+
 	span {
 		display: inline-flex;
 		justify-content: center;
@@ -997,6 +992,7 @@ button[aria-expanded="true"].btn-category img {
 		font-weight: bold;
 		height: 100%;
 	}
+
 	a {
 		font-size: 1.4rem;
 		width: 12rem;
@@ -1025,6 +1021,7 @@ button[aria-expanded="true"].btn-category img {
 			background-color: $gray-300;
 			padding: 1rem;
 		}
+
 		dt {
 			flex: 1;
 			text-align: center;
@@ -1039,6 +1036,7 @@ button[aria-expanded="true"].btn-category img {
 				margin-top: 0.5rem;
 			}
 		}
+
 		dd {
 			flex: 4;
 			font-size: 1.2rem;
@@ -1054,6 +1052,7 @@ button[aria-expanded="true"].btn-category img {
 		display: block;
 		max-width: 14rem;
 	}
+
 	.photo {
 		border-radius: 1.6rem;
 		overflow: hidden;
@@ -1095,6 +1094,7 @@ button[aria-expanded="true"].btn-category img {
 		display: block;
 		max-width: 9rem;
 	}
+
 	.photo {
 		border-radius: 50%;
 		overflow: hidden;
@@ -1107,6 +1107,111 @@ button[aria-expanded="true"].btn-category img {
 		text-align: center;
 	}
 }
+
+
+.swiperType_review {
+	margin: 0 1.8rem;
+	padding-bottom: 4rem;
+
+	.card {
+		border-radius: 1.6rem;
+		padding: 1.6rem;
+	}
+
+	.card-body {
+		padding: 1rem 1.2rem;
+	}
+
+	.card-info {
+		position: relative;
+		display: flex;
+		justify-content: space-around;
+		font-size: 1.4rem;
+		color: $black;
+		margin-top: 3rem;
+
+
+
+		&::after {
+			content: '';
+			position: absolute;
+			left: 50%;
+			top: 0;
+			z-index: 1;
+			width: 1px;
+			height: 100%;
+			background-color: $gray-400;
+		}
+
+		dd {
+			font-size: 2.4rem;
+			font-weight: bold;
+			color: $primary;
+		}
+	}
+
+	.photo {
+		max-width: 12rem;
+		border-radius: .5rem;
+		overflow: hidden;
+	}
+
+	.swiper-horizontal>.swiper-pagination-bullets,
+	.swiper-pagination-bullets.swiper-pagination-horizontal,
+	.swiper-pagination-custom,
+	.swiper-pagination-fraction {
+		bottom: 0;
+	}
+
+	.swiper-pagination-bullet-active {
+		background: $black;
+	}
+
+	dt {
+		font-size: 1.4rem;
+		color: $gray-600;
+		margin-bottom: 1rem;
+		line-height: 1.2;
+		font-weight: normal;
+	}
+
+	dd {
+		font-size: 1.2rem;
+		color: $gray-500;
+		margin-bottom: 1rem;
+		line-height: 1;
+
+	}
+
+}
+
+.swiper.myReviewSlide {
+	position: relative;
+
+	.swiper-button-prev {
+		right: auto;
+		left: 2.5rem;
+	}
+
+	.swiper-button-next {
+		left: auto;
+		right: 2.5rem;
+	}
+
+	.swiper-button-next,
+	.swiper-button-prev {
+		width: 2rem;
+		height: 2rem;
+		color: $black;
+
+		&::after {
+			font-size: 2rem;
+			font-weight: bold;
+		}
+	}
+
+}
+
 
 // login
 .login {
@@ -1124,6 +1229,7 @@ button[aria-expanded="true"].btn-category img {
 			color: $black;
 			height: 4rem;
 		}
+
 		span {
 			display: flex;
 			justify-content: center;
@@ -1133,13 +1239,11 @@ button[aria-expanded="true"].btn-category img {
 		}
 
 		&--google {
-			background: url("../../dist/images/common/ico_google.svg") no-repeat
-				left center;
+			background: url("../../dist/images/common/ico_google.svg") no-repeat left center;
 		}
 
 		&--apple {
-			background: url("../../dist/images/common/ico_apple.svg") no-repeat
-				left center;
+			background: url("../../dist/images/common/ico_apple.svg") no-repeat left center;
 		}
 	}
 
@@ -1157,12 +1261,14 @@ button[aria-expanded="true"].btn-category img {
 			height: 4rem;
 			border-radius: 0;
 		}
+
 		input[type="checkbox"] {
 			border: 1px solid $black;
 			border-radius: 0;
 			width: 1.6rem;
 			height: 1.6rem;
 		}
+
 		button[type="submit"] {
 			border-radius: 5rem;
 			height: 4rem;
@@ -1180,6 +1286,7 @@ button[aria-expanded="true"].btn-category img {
 			margin-bottom: 3.6rem;
 			text-align: center;
 		}
+
 		dt {
 			margin-bottom: 1.2rem;
 		}
@@ -1201,7 +1308,7 @@ button[aria-expanded="true"].btn-category img {
 
 	// search
 	.search {
-		& > button#toggle {
+		&>button#toggle {
 			position: absolute;
 			right: 6rem;
 			top: 0.7rem;
@@ -1209,13 +1316,12 @@ button[aria-expanded="true"].btn-category img {
 			background-color: #fff;
 		}
 
-		& > button#toggle::after {
+		&>button#toggle::after {
 			content: "";
 			display: block;
 			width: 2.4rem;
 			height: 2.4rem;
-			background: url("../../dist/images/common/btn_search.svg") no-repeat
-				center center;
+			background: url("../../dist/images/common/btn_search.svg") no-repeat center center;
 			background-size: contain;
 		}
 
@@ -1367,6 +1473,7 @@ button[aria-expanded="true"].btn-category img {
 	}
 
 	.swiper.cardSlide {
+
 		.swiper-button-next,
 		.swiper-button-prev {
 			display: none;
@@ -1408,7 +1515,7 @@ button[aria-expanded="true"].btn-category img {
 		margin: 11rem 3.2rem 6rem 3.2rem;
 
 		li {
-			& > a {
+			&>a {
 				position: absolute;
 				left: 0;
 				top: 0;
@@ -1418,7 +1525,7 @@ button[aria-expanded="true"].btn-category img {
 				font-weight: bold;
 			}
 
-			& > a.tab_01 {
+			&>a.tab_01 {
 				left: 0;
 
 				&::after {
@@ -1431,7 +1538,7 @@ button[aria-expanded="true"].btn-category img {
 				}
 			}
 
-			& > a.tab_02 {
+			&>a.tab_02 {
 				left: 11rem;
 			}
 
@@ -1439,14 +1546,17 @@ button[aria-expanded="true"].btn-category img {
 				display: none;
 			}
 		}
+
 		li.active {
-			& > a {
+			&>a {
 				color: $primary;
 			}
+
 			.login__info {
 				display: block;
 			}
 		}
+
 		&__info {
 			padding-top: 4.8rem;
 		}
@@ -1477,8 +1587,9 @@ button[aria-expanded="true"].btn-category img {
 
 // Desktop
 @include media-breakpoint-up(lg) {
+
 	.carousel,
-	.footer > div,
+	.footer>div,
 	.content {
 		max-width: 144rem;
 		margin: 0 auto;
@@ -1490,8 +1601,7 @@ button[aria-expanded="true"].btn-category img {
 			font-size: 1.6rem;
 			color: $black;
 			padding-left: 2.5rem;
-			background: url("../../dist/images/common/ico_home.svg") no-repeat
-				left center;
+			background: url("../../dist/images/common/ico_home.svg") no-repeat left center;
 		}
 	}
 
@@ -1505,7 +1615,7 @@ button[aria-expanded="true"].btn-category img {
 			display: none;
 		}
 
-		&-nav .show > .nav-link,
+		&-nav .show>.nav-link,
 		&-nav .nav-link.active {
 			color: $blue;
 		}
@@ -1554,7 +1664,7 @@ button[aria-expanded="true"].btn-category img {
 		top: 0;
 		z-index: 3;
 
-		& > button#toggle {
+		&>button#toggle {
 			position: absolute;
 			right: 3rem;
 			top: 2rem;
@@ -1565,22 +1675,20 @@ button[aria-expanded="true"].btn-category img {
 			border-radius: 50%;
 		}
 
-		& > button#toggle::after {
+		&>button#toggle::after {
 			content: "";
 			display: block;
 			width: 1.4rem;
 			height: 1.4rem;
-			background: url("../../dist/images/common/btn_search_w.svg")
-				no-repeat center center;
+			background: url("../../dist/images/common/btn_search_w.svg") no-repeat center center;
 			background-size: contain;
 		}
 
-		& > button#toggle.active {
-			background: $white url("../../dist/images/common/btn_b_close.svg")
-				no-repeat center center;
+		&>button#toggle.active {
+			background: $white url("../../dist/images/common/btn_b_close.svg") no-repeat center center;
 		}
 
-		& > button#toggle.active::after {
+		&>button#toggle.active::after {
 			background: none;
 		}
 
@@ -1623,13 +1731,14 @@ button[aria-expanded="true"].btn-category img {
 	}
 
 	.carousel {
-		&-caption > h2 {
+		&-caption>h2 {
 			font-size: 4.8rem;
 		}
 	}
 
 	.footer {
 		background-color: $black;
+
 		&-menu {
 			width: 32rem;
 
@@ -1679,7 +1788,7 @@ button[aria-expanded="true"].btn-category img {
 	.challenge {
 		margin-bottom: 7rem;
 
-		button > span {
+		button>span {
 			font-size: 2.4rem;
 			font-weight: bold;
 		}
@@ -1699,10 +1808,11 @@ button[aria-expanded="true"].btn-category img {
 		dd {
 			font-size: 1.8rem;
 
-			a > em {
+			a>em {
 				font-size: 1.6rem;
 			}
-			a > em::after {
+
+			a>em::after {
 				width: 7.5rem;
 				height: 1.5rem;
 				top: 0;
@@ -1736,13 +1846,13 @@ button[aria-expanded="true"].btn-category img {
 			height: 15rem;
 		}
 
-		& > ul {
+		&>ul {
 			margin-top: 1rem;
 			border-top: 1px solid $gray-400;
 			padding: 3rem 0 1rem 0;
 		}
 
-		& > ul > li {
+		&>ul>li {
 			padding: 0.2rem 0;
 			margin-right: 3rem;
 			padding-right: 3rem;
@@ -1780,7 +1890,7 @@ button[aria-expanded="true"].btn-category img {
 				display: none;
 			}
 
-			a.subtit + .depth {
+			a.subtit+.depth {
 				visibility: hidden;
 				height: 2.7rem;
 				overflow: hidden;
@@ -1794,7 +1904,7 @@ button[aria-expanded="true"].btn-category img {
 				display: inline-flex;
 			}
 
-			a.subtit.active + .depth {
+			a.subtit.active+.depth {
 				opacity: 1;
 				visibility: visible;
 			}
@@ -1817,10 +1927,12 @@ button[aria-expanded="true"].btn-category img {
 			overflow: hidden;
 			transition: width 0.1s ease-out, opacity 0.2s 0.1s ease-in;
 		}
+
 		.depth--3.active {
 			width: 100%;
 			opacity: 1;
 		}
+
 		.depth--3 ul {
 			display: flex;
 			align-items: center;
@@ -1981,10 +2093,12 @@ button[aria-expanded="true"].btn-category img {
 			right: auto;
 			left: -1.5rem;
 		}
+
 		.swiper-button-next {
 			left: auto;
 			right: -1.5rem;
 		}
+
 		.swiper-button-next,
 		.swiper-button-prev {
 			width: 6rem;
@@ -2032,6 +2146,7 @@ button[aria-expanded="true"].btn-category img {
 			h3 {
 				font-size: 2.4rem;
 			}
+
 			p {
 				color: $gray-600;
 				font-size: 1.6rem;
@@ -2056,10 +2171,12 @@ button[aria-expanded="true"].btn-category img {
 		.modal-header {
 			height: 27rem;
 		}
+
 		.modal-body {
 			.info-list {
 				transform: translate(-50%, -25%);
 			}
+
 			.info-list dl dt {
 				font-size: 1.6rem;
 			}
@@ -2111,9 +2228,11 @@ button[aria-expanded="true"].btn-category img {
 			margin: 2rem 0 0 0;
 			height: 6rem;
 		}
+
 		span {
 			font-size: 6rem;
 		}
+
 		a {
 			width: 18rem;
 			height: 4rem;
@@ -2142,6 +2261,7 @@ button[aria-expanded="true"].btn-category img {
 				min-height: 10rem;
 				padding: 1.5rem;
 			}
+
 			dt {
 				font-size: 1.6rem;
 
@@ -2149,6 +2269,7 @@ button[aria-expanded="true"].btn-category img {
 					font-size: 2.4rem;
 				}
 			}
+
 			dd {
 				flex: 3;
 			}
@@ -2164,6 +2285,7 @@ button[aria-expanded="true"].btn-category img {
 			justify-content: center;
 			padding: 15rem 0;
 		}
+
 		li {
 			width: 46rem;
 			height: 54rem;
@@ -2174,10 +2296,12 @@ button[aria-expanded="true"].btn-category img {
 			&:first-child {
 				margin-right: 1.6rem;
 			}
-			&:first-child + li > a {
+
+			&:first-child+li>a {
 				margin-bottom: 4.3rem;
 			}
-			& > a {
+
+			&>a {
 				display: block;
 				text-align: center;
 				font-weight: bold;
@@ -2203,6 +2327,7 @@ button[aria-expanded="true"].btn-category img {
 			width: 14rem;
 			margin-top: 4rem;
 		}
+
 		.photo {
 			max-width: 14rem;
 		}
@@ -2215,21 +2340,73 @@ button[aria-expanded="true"].btn-category img {
 		.swiper-slide {
 			width: 9rem;
 		}
+
 		.photo {
 			max-width: 9rem;
 			margin-bottom: 0.5rem;
 		}
+
 		.swiper-pagination {
 			display: none;
 		}
 	}
+
 	a.btn_allview {
 		position: absolute;
 		right: 2rem;
 		bottom: 2rem;
 		z-index: 1;
 	}
+
 	a.btn_allview:link {
 		text-decoration: underline;
+	}
+
+
+	.swiperType_review {
+		margin: 0 8rem;
+		padding-bottom: 0;
+
+		.card {
+			display: flex;
+			flex-direction: row;
+			border: none;
+		}
+
+		.card-info {
+			min-width: 40rem;
+			margin-top: 0;
+		}
+	}
+
+	.swiper.myReviewSlide {
+		position: relative;
+
+		.swiper-button-prev {
+			right: auto;
+			left: 2.5rem;
+		}
+
+		.swiper-button-next {
+			left: auto;
+			right: 2.5rem;
+		}
+
+		.swiper-button-next,
+		.swiper-button-prev {
+			width: 4rem;
+			height: 4rem;
+			color: $black;
+
+			&::after {
+				font-size: 4rem;
+				font-weight: bold;
+			}
+		}
+
+		.swiper-pagination {
+			display: none;
+		}
+
 	}
 }
